force-app/main/default/objects/ABP_Approval__c/ABP_Approval__c.object-meta.xml
<CustomObject>
    <label>Account Plan Approval</label>
    <nameField>
        <displayFormat>Approval-{000}</displayFormat>
        <label>Account Plan Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>