force-app/main/default/objects/ABP_Approval__c/fields/ABP_Owner__c.field-meta.xml
<CustomField>
    <fullName>ABP_Owner__c</fullName>
    <description>This Field Populates Owner of the  Associated Account plan</description>
    <label>ABP Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>