force-app/main/default/objects/ABP_Approval__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>Master Detail Relationship Established Between Account Plan and Account plan Approval</description>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Approvals</relationshipLabel>
    <relationshipName>Account_Plan_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>