force-app/main/default/objects/ABP_Approval__c/fields/Account_Plan_Approval_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Approval_ID__c</fullName>
    <formula>Account_Plan__r.Name&amp;&quot;-&quot;&amp;TRIM(LEFT(Text( CreatedDate),16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Approval ID</label>
    <type>Text</type>
</CustomField>