force-app/main/default/objects/ABP_Approval__c/fields/Account_Plan_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Owner__c</fullName>
    <formula>ABP_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Owner</label>
    <type>Text</type>
</CustomField>